# comsol

./: README.md
contracts/spl-token/: package-lock.json
contracts/spl-token/programs/solana-comai/src/: lib.rs
contracts/spl-token/tests/: solana-comai.ts
frontend/: package-lock.json  package.json
frontend/src/components/: AppBar.tsx  ContentContainer.tsx  Footer.tsx
frontend/src/components/ProductCard/: index.tsx
frontend/src/components/nav-element/: index.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/products/[id]/: index.tsx
frontend/src/utils/: dummy-data.ts
frontend/src/utils/icons/: placeholder-image.tsx
frontend/src/views/home/: banner.tsx  index.tsx
python/: api.py  main.py
solana-frontend/: config-overrides.js  package-lock.json  package.json
solana-frontend/src/: App.js  MyWallet.js
solana-frontend/src/components/: Arena.js  Editor.js  Intro.js
solana-frontend/src/utils/: api.js  config.js
solana-marketplace/: Anchor.toml  package-lock.json
solana-marketplace/programs/solana-marketplace/: Cargo.toml
solana-marketplace/programs/solana-marketplace/src/: lib.rs
solana-marketplace/tests/: solana-marketplace.ts
spl-token-COMAI/: Anchor.toml  package-lock.json
spl-token-COMAI/programs/solana-comai/: Cargo.toml
